  installed. This was necessary to allow vmdb2 to install Debian onto
  real hardware.

* The smoke test now tests a UEFI image as well.

* The rootfs unpacking action now copies `/etc/resolv.conf` into the
  chroot, overwriting what the tarball has. This allows vmdb2 to work
  with a tarball generated in a different network location.

Version 0.13.2, released 2018-05-06
------------------------------------

* New build, after CI screwed up.

Version 0.13.1, released 2018-04-30
----------------------------------

* Fix build-dependency on pandoc.

Version 0.13.1, released 2018-04-30
----------------------------------


Version 0.12, released 2018-02-24
----------------------------------

* Minor Debian packaging fixes.

Version 0.11, released 2018-02-10
----------------------------------

* Build fixes so that .deb doesn't contain Python 2.7 stuff, which
  isn't wanted or used.

Version 0.10, released 2018-02-10
---------------------------------

* Build tweaks to make builds work on Debian unstable.

Version 0.9, released 2017-10-11
---------------------------------

* Stuart Prescott added a `variant` parameter to the `vmdebootstrap`
  plugin.

* Stuart and Lars documented some of the dependencies in README. If
  they're insufficient, report a bug please.

* Stuart added a `qemu-debootstrap` plugin to build images for a
  foreign architecture.

* Lars Wirzenius added the function `vmdb.runcm_chroot` for executing
  programs inside a chroot. It's a short wrapper around `vmdb.runcmd`,
  but is a little easier to get right than invoking **chroot**(8) via
  `runcmd`. Michael Stapelberg fixed the function.

* Lars Wirzenius changed it so that `.vmdb` files can have structured
  YAML values and their constituent strings are used as Jinja2
  templates. Previously vmdb2 would just crash. This opens a
  possibility to have things like "list of packages to install" for
  the `apt` step as a YAML list, instead of having the step runner
  parse a space delimited list.
