@@ -13,6 +13,7 @@ vmdb/plugins/echo_plugin.py
 vmdb/plugins/error_plugin.py
 vmdb/plugins/grub_plugin.py
 vmdb/plugins/kernel_plugin.py
+vmdb/plugins/lvm2_plugin.py
 vmdb/plugins/mkfs_plugin.py
 vmdb/plugins/mkimg_plugin.py
 vmdb/plugins/mount_plugin.py
